<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cosmic.newyorktimessearch.fragment.SearchFilterFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/begin_dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="70dp"
            android:text="@string/begin_date"
            android:textSize="@dimen/textSize"
            android:textColor="@color/purple"/>

        <EditText
            android:id="@+id/edit_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/begin_dt"
            android:layout_toRightOf="@+id/begin_dt"
            android:layout_marginEnd="11dp"
            android:textColor="@android:color/black"
            android:ems="10"
            android:hint="@string/enterDate"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/sort_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_begin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:textSize="@dimen/textSize"
            android:textColor="@color/purple"
            android:text="@string/sort_order" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_below="@+id/sort_text"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:background="@color/purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/news_desk"
            android:textColor="@color/purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/begin_dt"
            android:layout_below="@+id/spinner"
            android:layout_marginTop="31dp"
            android:textSize="@dimen/textSize"
            android:text="@string/news_desk" />

        <CheckBox
            android:id="@+id/arts_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="27dp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/news_desk"
            android:layout_alignStart="@+id/news_desk"
            android:text="@string/arts" />

        <CheckBox
            android:id="@+id/sport_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sports"
            android:textColor="@android:color/black"
            android:layout_below="@+id/arts_box"
            android:layout_alignStart="@+id/arts_box" />

        <CheckBox
            android:id="@+id/fashion_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/sport_box"
            android:layout_below="@+id/sport_box"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:text="@string/fashion" />

        <Button
            android:id="@+id/save"
            android:layout_below="@+id/fashion_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:layout_centerHorizontal="true"
            android:text="@string/save" />


    </RelativeLayout>
</layout>